# reqwest_tracing_bug

./: Cargo.toml
src/: main.rs
