[package]
name = "reqwest_tracing_bug"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features = ["tracing"] }
opentelemetry = "0.25.0"
opentelemetry-otlp = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["tokio", "rt-tokio"] }
reqwest = "0.12.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.26"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
